seis de agosto sabado negro

--- a/OTONO2016/1/Semantica1/Semantica1.tex
+++ b/OTONO2016/1/Semantica1/Semantica1.tex
@@ -913,7 +913,7 @@ $\conf{\appD} \tto t_1 [s] \ t_2 [s]$&$\rulename{AppSub} $\\
 %&\\
 %$\conf{\negacion{t}} \tto \negacion{t [s]}$&$\rulename{NegationSub} $\\
 %&\\
-$ \inference {\filtrar(w, S) = \{v\}} {\ascrip{w} \tto v} $&$\rulename{Asc} $\\
+$ \inference {\filtrar(w, S) = \{v\}} {\ascrip{w} \tto \{v\}} $&$\rulename{Asc} $\\
 &\\
 $\inference {\filtrar(w, T_1) = \{v\}}{\oletPT{T_1}{w}{t_2[s]} \tto \confext{t_2}}$&$\rulename{Let} $\\
 &\\
