--- a/OTONO2016/1/Survey/survey.tex
+++ b/OTONO2016/1/Survey/survey.tex
@@ -297,9 +297,7 @@ Coherence establishes a single well-defined meaning for each expression. That is
 
 
 \subsubsection{A Second Look at Overloading}
-Odersky et al.~\cite{Odersky1995} propose an extension of the Hindley/Milner system that supports overloading and polymorphic records. They proof that the type system is sound respect to a standard untyped compositional semantics. Additionally, the show  that
-every typable term in this system has  a principal type. In this work 
-In our view, one of the most serious criticisms of type classes is that a program cannot be assigned a meaning independent of its types.
+Odersky et al.~\cite{Odersky1995} propose an extension of the Hindley/Milner system that supports overloading and polymorphic records. They proof that the type system is sound respect to a standard untyped compositional semantics. Additionally, the show  that every typable term in this system has  a principal type. They highlight that for type classes cannot be assigned a meaning independent of its types, so some important properties 
 
 
 
